plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'

	testImplementation 'junit:junit:4.12'
	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.skullswap'
version = '1.0.0'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
	options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}

test {
	enabled = false
}

tasks.register('runClient', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.skullswap.SkullSwapPluginTest'
	jvmArgs '-ea', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
	args '--developer-mode'
}
